--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -3,10 +3,30 @@
     margin: 0;
     padding: 0;
   }
-  
+
   li {
     margin: 0;
     padding: 0;
     list-style-type: none;
+    &:not(:last-child) {
+      border-bottom: 1px solid white;
+    }
+
+    a {
+      height: 40px;
+      width: 100px;
+      background-color: rgb(160, 160, 160);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      padding-left: 10px;
+      text-decoration: none;
+
+      &:hover {
+        background-color: rgb(212, 212, 212);
+      }
+    }
   }
+
+  margin-right: 100px;
 }
